# newAde1

./: .gitignore  CMakeLists.txt  README.md
examples/: limpia  newAde0  newAde1  set2.ej1  set2.ej2  set2.eja  set3.ej3  testAde1
examples/ReddyBook/: Problem_7_3_8.efs  Problem_7_3_8.elm  Problem_7_3_8.jnt  Problem_7_3_8.rfs  limpia  newAde1
output/: example1.out  example10.out  example11.out  example12.out  example13.out  example14.out  example15.out  example16.out  example17.out  example18.out  example19.out  example2.out  example20.out  example21.out  example22.out  example23.out  example3.out  example4.out  example5.out  example6.out  example7.out  example8.out  example9.out  set2ej1.out  set2ej1.out1  set2ej1.out2  set2eja.out
src/: CMakeLists.txt  ade1a.cpp  ade1b.cpp  ade1c.cpp  ade1d.cpp  ade1e.c.bak  ade1e.cpp  ade1f.cpp  ade1g.cpp  globalElementStiffnessMatrix.cpp  header.cpp  localElementStiffnessMatrix.cpp  main.cpp  mult3.cpp  mult4.cpp  mult5.cpp  printElementInfo.cpp  printJointInfo.cpp
src/include/: common.h  constraint.h  defin.h  dimen.h  element.h  gaussElimination.h  joint.h  language.h  matVectMult.h  newade1.h  prototyp.h  solver.h  std2file.h  typedef.h
src/oldBasicCode/: ade1.bas  ade1a.bas  ade1b.bas  ade1c.bas  ade1cop.bas  ade1d.bas  ade1e.bas  ade1f.bas  ade1g.bas  enca.h
src/otherSrc/: read.cpp  testmatmult.cpp
